--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "abuseio/parser-spamcop",
     "description": "Parser addon for handling notifications from spamcop",
+    "license": "GPL-2.0",
     "require": {
         "php": ">=5.4.0",
         "another-vendor/package": "1.*"
