--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "abuseio/parser-spamcop",
     "description": "Parser addon for handling notifications from spamcop",
-    "version": "1.0.0-dev",
+    "version": "1.1.0",
     "keywords": ["laravel", "abuseio", "parser", "spamcop"],
     "homepage": "http://abuse.io",
     "type": "library",
