--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "docs": "https://abuse.io/resources/documentation/"
     },
     "require": {
-        "php": ">=5.4.0",
-        "abuseio/parser-common": "dev-master"
+        "php": ">=5.5.9",
+        "abuseio/parser-common": "1.1.*"
     },
     "autoload": {
         "psr-4": {
