--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "abuseio/parser-spamcop",
     "description": "Parser addon for handling notifications from spamcop",
-    "version": "1.3.5",
+    "version": "1.4.1",
     "keywords": ["laravel", "abuseio", "parser", "spamcop"],
     "homepage": "http://abuse.io",
     "type": "library",
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "abuseio/parser-common": "1.1.* || dev-master"
+        "abuseio/parser-common": "1.2.*"
     },
     "autoload": {
         "psr-4": {
